<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL2624" Id="{8df34eb1-4b05-4025-80da-51c0ffef476b}">
    <Declaration><![CDATA[TYPE ST_EL2624 :
STRUCT
	//4-channel relay output / Lamps
	
	bStageCollectionLeftLight	:	BOOL; 	//Channel 1 - Stage Collection Left Side LED 
	bSampleRecoveryLight		:	BOOL;	//Channel 2 - Sample Recovery LED
	bStageCollectionRightLight	:	BOOL;	//Channel 3 - Stage Collection Right Side LED 
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>